--- a/templates/news/collate.html
+++ b/templates/news/collate.html
@@ -17,10 +17,16 @@
         <div id="namedbutton" class="button">named:levels</div>
         <div id="familybutton" class="button">show:grouping</div>
         <div id="importantnet" class="button">show:terms</div>
-        <div id="wordsearch">
+        <div id="searchbutton" class="button">
+            <input type="text" value="" name="search" id="searchtxt">
+            search:terms
+        </div>
+       <!--
+ <div id="wordsearch">
             <input type="text" value="search" name="search" id="searchtxt">
             <a class="searchButton"><span>terms</span></a>
         </div>
+-->
         <!--
 <div id="my-slider" class="dragdealer">
         	<div id="speed" class="handle">x</div>
