--- a/templates/news/poetronix.html
+++ b/templates/news/poetronix.html
@@ -1,30 +1,27 @@
 {% extends "base.html" %}
 
 {% block title %}
-{{comment}}
-    {% with all_articles.0 as article %}
-        p o e m : {{ article.group }}    
-    {% endwith %}
-{{endcomment}}
+        {{lastword}}  
 {% endblock %}
 
 {% block content %}
 <script type="text/javascript" src="/media/js/getdata.js"></script>
 
 {% if all_articles %}
+    <h2 style="margin-bottom: 2px">{{lastword}} {{article.date}}</h2>
     {% with all_articles.0 as article %}
-        <h3 style="margin-bottom: 10px">{{article|safe}}</h3>
+        <h6 style="margin-bottom: 16px">{{article.date}}</h6>
     {% endwith %}
+    
     <ul>
     
     {% for text in poem %}
-        <li style="margin-bottom: 6px; font-size: 14px"> {{ text }} </li>
+        <li style="margin-bottom: 6px; font-size: 18px"> {{ text }} </li>
     {% endfor %}
     </ul>
-    
-    
+        
 {% else %}
-    <p>No articles available.</p>
+    <p style="margin-top: 40px; font-weight: 200;">No stories available.</p>
 {% endif %}
 
 
