--- a/templates/news/collate.html
+++ b/templates/news/collate.html
@@ -12,14 +12,13 @@
     <div id="toolbacker"></div>
     <div id="toolbar">
         <div id="whitelogo"><img src="/media/images/inartlogo_light.png" alt="fix" title="pleased to meet you" width="97" height="24" style="opacity: 0.6;"/></div>
-        <div id="sentimentbutton" class="button">show:sentiment</div>
-        <div id="heatbutton" class="button">map:freq</div>
-        <div id="namedbutton" class="button">named:levels</div>
-        <div id="familybutton" class="button">show:grouping</div>
-        <div id="importantnet" class="button">show:terms</div>
+        <div id="sentimentbutton" class="button">Sentiment</div>
+        <div id="heatbutton" class="button">Frequency</div>
+        <div id="namedbutton" class="button">Entities</div>
+        <div id="familybutton" class="button">Grouping</div>
+        <div id="importantnet" class="button">Terms</div>
         <div id="searchbutton" class="button">
-            <input type="text" value="" name="search" id="searchtxt">
-            search:terms
+            <input type="text" value="Search" name="search" id="searchtxt">
         </div>
        <!--
  <div id="wordsearch">
