--- a/templates/news/gather.html
+++ b/templates/news/gather.html
@@ -2,6 +2,21 @@
 
 {% block title %}{{ "g a t h e r " }}{% endblock %}
 
+<script type="text/javascript">
+
+    /*
+form = $('#gatherPage form');
+    form_data = form.serialize();
+    $.ajax(
+        POST,
+        data = form_data,
+    )
+*/
+    //MAKE A REAL AJAX POST CALL THAT SENDS THE SERIALIZED FORM DATA AND GETS THE NEW URL IN RETURN
+    //MAKE A WAITING SCREEN AS PLACEHOLDER UNTIL THE NEW URL IS RECIEVED
+    
+</script>
+
 {% block content %}
     <div id="gatherPage">
         <h1 style="font-weight: 400; font-size: 42px; margin-bottom: 0px;"> 
