--- a/templates/news/collate.html
+++ b/templates/news/collate.html
@@ -119,6 +119,13 @@
             </p>
         <div class="footerline"></div>
     </section>
+    
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('#SVGcontainer').html('<p style="text-align: center; padding-bottom: 30px; margin-bottom: 20px; background: #eee url(/media/images/loading.gif) no-repeat center 2px;" id="loading"></p>');
+        });
+    </script>
+    
 {% endblock %}
 
 
