--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     
         <div id="toolbacker"></div>
         <div id="toolbar">
-            <div id="whitelogo"><img src="/media/images/inartlogo_light.png" alt="fix" title="pleased to meet you" width="97" height="24" style="opacity: 0.6;"/></div>
+            <div id="whitelogo"><a href="http://www.inarticle.org/news"><img src="/media/images/inartlogo_light.png" alt="fix" title="pleased to meet you" width="97" height="24" style="opacity: 0.6;"/></a></div>
             {% block toolbar %}
             
             {% endblock %}
